MinorModif:Ajout dans la vue Admin -> produits le prix bon achat en dessous du prix de remboursement pour une meilleurs lisibilité des tarif sans entrer sur la fiche produit, Fixé: un bug lié à la deactivation date lors du réenvoi mail ou réimpression ticket depuis Admin -> tickets si un ticket n'avais pas encore été consommé ( cas d'un client qui n'a pas recu son mail ou perdu son ticket ) cela générait une 500 parce que le deactivation_date du ticket était null. CSS: Modification du visuel de pagination, application d'un z-index pour éviter que le pattern ne vienne en surimpression et vienne géner le clic, mise en place d'une flex/column pour le nombre de resultats, couleur du text var(--main-color), réduction des padding originaux.

--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -186,3 +186,14 @@ td.link{
         }
     }
 }
+
+/* Tentative de chopper la pagination */
+nav.flex.items-center.justify-between{
+    div:nth-of-type(2){
+        display: flex;
+        flex-direction: column;
+        div>p{
+            color: var(--main-cards-font);
+        }
+    }
+}
